<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vu.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/contact" />
                <TextView
                    android:id="@+id/demandeContact"
                    android:textStyle="bold"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demande_de_contact" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#CCCCCC" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/bearing"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/bearing" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/position"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/position" />
                <TextView
                    android:id="@+id/lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude" />
                <TextView
                    android:id="@+id/lon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude" />
                <TextView
                    android:id="@+id/addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addr" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#CCCCCC" />
            <TextView
                android:id="@+id/txtmcontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/contacts" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerView"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#CCCCCC" />
            <TextView
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/option" />
            <TextView
                android:id="@+id/optionsenvoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optionenvoi" />
            <TextView
                android:id="@+id/optionsenvoidistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/optionenvoidistance" />
            <SeekBar
                android:id="@+id/seekBarDist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="10"
                android:max="1000"/>

            <TextView
                android:id="@+id/optionsenvoitemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/optionenvoi2" />
            <SeekBar
                android:id="@+id/seekBarSec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="1"
                android:max="120"/>
            <TextView
                android:id="@+id/optionsenvoicontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/optionenvoi3" />
            <SeekBar
                android:id="@+id/seekBarContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="10"
                android:max="120"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#CCCCCC" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>